2007-05-06  Eric B. Weddington <eweddington@cso.atmel.com>

	Fix bug #19666:
	* include/avr/io90pwmx.h: Add ADHSM, ADTS3 bits to the ADCSRB register.

2007-05-05  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/examples/asmdemo/asmdemo.dox: Fix HTML code in source code links.

2007-05-05  Eric B. Weddington <eweddington@cso.atmel.com>

	Fix bug #19495.
	* include/avr/interrupt.h: Fix doxygen stuff, whitespace, remove unused
	C++ stuff at the end.
	* NEWS: Update bugs fixed.

2007-05-02  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/overview.dox: Fix typos, grammar, names.
	* doc/api/inline_asm.dox: Expand title name back to the original title.

2007-04-27  Anatoly Sokolov <aesok@post.ru>

	* configure.ac: Move AT90USB82 device to 'avr5' architecture.
	* devtools/gen-avr-lib-tree.sh: (Ditto.).
	* doc/api/using-tools.dox: (Ditto.).
	* include/avr/iousbxx2.h (_VECTORS_SIZE): Redefine for AT90USB82.

2007-04-21 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io90pwm3.h: Change bit 2 of PLLCSR from
	PCKE to PLLF.
	Fixes savannah bug #19650: avr-libc: wrong named bit in SFR of AT90PWMx

2007-04-05  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/malloc.dox: Change title and reorder sentences in Introduction.

2007-03-30  Eric B. Weddington <eweddington@cso.atmel.com>

	* include/avr/io2343.h: Add missing bit definitions for MCUSR.
	Fixes WinAVR feature request #1657218.

2007-03-30  Dmitry Xmelkov  <dmix@gmail.ru>

	* libc/stdlib/ctype.S: Fix bug #19281: isblank('\v') return TRUE:
	mismatch to C99

2007-03-29  Eric B. Weddington <eweddington@cso.atmel.com>

	* doc/api/doxygen.config.in (INPUT): Add new file to list. Reorder list.
	* doc/api/pgmspace.dox (new file): New chapter. Data in Program Space.
	* doc/api/library.dox (new file): New chapter. How to Create a Library.
	* doc/api/porting.dox: Rewrote the introduction for better flow.
	* doc/api/Makefile.am (EXTRA_DIST): Add new .dox file.